<resources>
    <string name="app_name">RecyclerViewExample</string>
    <string name="contact_image">Contact Image</string>
    <string name="contact">Contact</string>
    <string name="contact_number">Contact number</string>
    <string name="todo">TODO</string>
    <string name="enter_number">Enter Number</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="update_contact">Update Contact</string>
</resources>