<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_secondary"
    android:paddingLeft="21dp"
    android:paddingRight="21dp"
    android:paddingBottom="11dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="11dp"
        android:id="@+id/addTitle"
        android:layout_marginBottom="11dp"
        android:inputType="text"
        tools:ignore="TextViewEdits"
        android:text="@string/add_contact"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/enter_name"
        android:padding="11dp"
        android:id="@+id/edtName"
        android:inputType="text"
        android:layout_marginBottom="11dp"
        android:autofillHints=" " />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="11dp"
        android:hint="@string/enter_number"
        android:id="@+id/edtNumber"
        android:inputType="number"
        android:autofillHints=" " />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/btnAction"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:layout_marginTop="11dp"
        android:textColor="@color/design_default_color_primary_dark"
        android:layout_gravity="end" />

</LinearLayout>